test/Fail/DisallowedOverlaps.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Resolve instance argument _18 : A
  Candidates
    overlap b .B.a : A
    a : A
    (stuck)
  Resolve instance argument _24 : A
  Candidates
    d .D.a : A
    overlap c .C.a : A
    (stuck)
  Resolve instance argument _30 : A
  Candidates
    a : A
    overlap b .B.a : A
    (stuck)

DisallowedOverlaps.agda:27.11-37.12: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  DisallowedOverlaps.agda:27.11-12
  DisallowedOverlaps.agda:31.11-12
  DisallowedOverlaps.agda:37.11-12
